[package]
name = "aoc-2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
indexmap = "1.9.3"
itertools = "0.10.5"
nom = "7.1.3"
rayon = "1.7.0"
thiserror = "1.0.40"


[[bin]]
name = "day14"

[[bin]]
name = "day15"

[[bin]]
name = "day16"

[[bin]]
name = "day17"
